Parallelise bulk block puts in FileCAS